--- a/client/css/global.less
+++ b/client/css/global.less
@@ -12,6 +12,18 @@ h1,h2,h3,h4,h5,h6 {
   font-weight: 300;
 }
 
+
+a {
+    color: inherit;
+    text-decoration: none;
+    transition: 0.5s color;
+
+    &:hover {
+        // color: @primaryLinkHoverColor;
+        color : @darkgreen;
+    }
+}
+
 .main-title{
   position: relative;
 }
