--- a/client/views/header/header.html
+++ b/client/views/header/header.html
@@ -18,6 +18,10 @@
         <i class="beer icon"></i>
         Test
       </a>
+      <a class="item" href="{{pathFor 'blogIndex'}}">
+        <i class="beer icon"></i>
+        Blog
+      </a>
       <a class="item" href="{{pathFor 'contact'}}">
         <i class="mail icon"></i>
         Contact
