--- a/client/css/lib/variables.less
+++ b/client/css/lib/variables.less
@@ -8,5 +8,10 @@
 @mobile:    ~"only screen and (max-width: 719px)";
 
 
+@primaryLinkHoverColor: #3B5998;
+@darkgreen :#297b3c;
+
+.facebook { color: #3B5998;}
+.twitter { color:#00ACEE;}
 
 
