--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -6,7 +6,7 @@
     <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
     <title>Meteor Boilerplate with Semantic UI</title>
 
-   <script src="//cdnjs.cloudflare.com/ajax/libs/parsley.js/1.2.2/parsley.min.js" type="text/javascript" charset="utf-8"></script>
+   <!-- // <script src="//cdnjs.cloudflare.com/ajax/libs/parsley.js/1.2.2/parsley.min.js" type="text/javascript" charset="utf-8"></script> -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Roboto+Slab:300' rel='stylesheet' type='text/css'>
 
   </head>
