--- a/client/views/subscriber/subscriber.html
+++ b/client/views/subscriber/subscriber.html
@@ -14,6 +14,6 @@
             <div class="field">
               <input placeholder="Your email here" type="email" >
             </div>
-          <button type="submit" class="ui green submit button fluid"></i>Subscribe</button>
+          <button type="submit" class="ui green submit button fluid">Subscribe</button>
         </form>
 </template>
